--- a/sms_router.conf
+++ b/sms_router.conf
@@ -1,5 +1,5 @@
-#SYSTROME_VIRTUOSYS
+#SYSTROME_SX600H
 model                   20000001:20000002
-path                    virtuosys
-asset-script-name       virtuosys_mgmt.php
-poll-script-name        virtuosys_poll.php
+path                    systrome
+asset-script-name       systrome_mgmt.php
+poll-script-name        systrome_poll.php
